Updated CSS and JS Links. Renamed to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Simple Adventure</title>
 
   <!-- Link to the external CSS file inside the "css" folder -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Main heading of the page -->
@@ -25,6 +25,7 @@
   </div>
 
   <!-- Link to the external JavaScript file inside the "js" folder -->
-  <script src="js/game.js"></script>
+  <script src="game.js"></script>
 </body>
+
 </html>
